--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
             </section>
             <div class="section">
                 <div class="container intro">
-                    <div class="content-wrapper contact">
+                    <div class="content-wrapper a contact">
                         <div class="heading-wrapper" data-w-id="d0eb390a-2d43-5fb0-b1cc-a245d22d5aec" id="w-node-d0eb390a-2d43-5fb0-b1cc-a245d22d5aec-23541a41">
                             <div class="max-width large">
                                 <div class="overflow-hide" data-w-id="bb73d1d4-3bbc-7251-53cb-c0dea9a52590">
