--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@
                            <div class="blurred-color" style="opacity:0"></div>
                            <div class="content-wrapper">
                               <div class="block-post">
-                                 <a class="link-post-thumbnail w-inline-block" href="post/how-automation-is-reshaping-client-engagement-and-operations.html"><img alt="How Automation is Reshaping Client Engagement and Operations" class="image-post-thumbnail" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/3.png" /></a>
+                                 <a class="link-post-thumbnail w-inline-block" href="post/how-automation-is-reshaping-client-engagement-and-operations.html"><img alt="How Automation is Reshaping Client Engagement and Operations" class="image-post-thumbnail" loading="eager" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/3.png" /></a>
                                  <div class="date">February 24, 2025</div>
                                  <a class="link-post w-inline-block" href="post/how-automation-is-reshaping-client-engagement-and-operations.html">
                                     <h3 class="heading-post">How Automation is Reshaping Client Engagement and Operations</h3>
@@ -135,7 +135,7 @@
                            <div class="blurred-color" style="opacity:0"></div>
                            <div class="content-wrapper">
                               <div class="block-post">
-                                 <a class="link-post-thumbnail w-inline-block" href="post/the-ai-evolution-what-2025-holds-for-business-and-innovation.html"><img alt="The AI Evolution: What 2025 Holds for Business and Innovation" class="image-post-thumbnail" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/6.png"/></a>
+                                 <a class="link-post-thumbnail w-inline-block" href="post/the-ai-evolution-what-2025-holds-for-business-and-innovation.html"><img alt="The AI Evolution: What 2025 Holds for Business and Innovation" class="image-post-thumbnail" loading="eager" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/6.png"/></a>
                                  <div class="date">December 12, 2024</div>
                                  <a class="link-post w-inline-block" href="post/the-ai-evolution-what-2025-holds-for-business-and-innovation.html">
                                     <h3 class="heading-post">The AI Evolution: What 2025 Holds for Business and Innovation</h3>
@@ -155,7 +155,7 @@
                            <div class="blurred-color" style="opacity:0"></div>
                            <div class="content-wrapper">
                               <div class="block-post">
-                                 <a class="link-post-thumbnail w-inline-block" href="post/smarter-logistics-the-role-of-ai-in-supply-chain-optimization.html"><img alt="Smarter Logistics: The Role of AI in Supply Chain Optimization" class="image-post-thumbnail" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/2.png"/></a>
+                                 <a class="link-post-thumbnail w-inline-block" href="post/smarter-logistics-the-role-of-ai-in-supply-chain-optimization.html"><img alt="Smarter Logistics: The Role of AI in Supply Chain Optimization" class="image-post-thumbnail" loading="eager" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/2.png"/></a>
                                  <div class="date">September 4, 2024</div>
                                  <a class="link-post w-inline-block" href="post/smarter-logistics-the-role-of-ai-in-supply-chain-optimization.html">
                                     <h3 class="heading-post">Smarter Logistics: The Role of AI in Supply Chain Optimization</h3>
@@ -175,7 +175,7 @@
                            <div class="blurred-color" style="opacity:0"></div>
                            <div class="content-wrapper">
                               <div class="block-post">
-                                 <a class="link-post-thumbnail w-inline-block" href="post/why-standardized-ai-creates-complexity-instead-of-solving-it.html"><img alt="Why Standardized AI Creates Complexity Instead of Solving It" class="image-post-thumbnail" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/5.png"/></a>
+                                 <a class="link-post-thumbnail w-inline-block" href="post/why-standardized-ai-creates-complexity-instead-of-solving-it.html"><img alt="Why Standardized AI Creates Complexity Instead of Solving It" class="image-post-thumbnail" loading="eager" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/5.png"/></a>
                                  <div class="date">April 29, 2024</div>
                                  <a class="link-post w-inline-block" href="post/why-standardized-ai-creates-complexity-instead-of-solving-it.html">
                                     <h3 class="heading-post">Why Standardized AI Creates Complexity Instead of Solving It</h3>
@@ -195,7 +195,7 @@
                            <div class="blurred-color" style="opacity:0"></div>
                            <div class="content-wrapper">
                               <div class="block-post">
-                                 <a class="link-post-thumbnail w-inline-block" href="post/rise-of-algorithmic-judgment-the-future-of-risk-and-credit-scoring.html"><img alt="Rise of Algorithmic Judgment: The Future of Risk and Credit Scoring" class="image-post-thumbnail" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/4.png"/></a>
+                                 <a class="link-post-thumbnail w-inline-block" href="post/rise-of-algorithmic-judgment-the-future-of-risk-and-credit-scoring.html"><img alt="Rise of Algorithmic Judgment: The Future of Risk and Credit Scoring" class="image-post-thumbnail" loading="eager" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/4.png"/></a>
                                  <div class="date">March 1, 2024</div>
                                  <a class="link-post w-inline-block" href="post/rise-of-algorithmic-judgment-the-future-of-risk-and-credit-scoring.html">
                                     <h3 class="heading-post">Rise of Algorithmic Judgment: The Future of Risk and Credit Scoring</h3>
@@ -215,7 +215,7 @@
                            <div class="blurred-color" style="opacity:0"></div>
                            <div class="content-wrapper">
                               <div class="block-post">
-                                 <a class="link-post-thumbnail w-inline-block" href="post/ai-in-2024-the-5-trends-shaping-the-future-of-business.html"><img alt="AI in 2024: The 5 Trends Shaping the Future of Business" class="image-post-thumbnail" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/7.png"/></a>
+                                 <a class="link-post-thumbnail w-inline-block" href="post/ai-in-2024-the-5-trends-shaping-the-future-of-business.html"><img alt="AI in 2024: The 5 Trends Shaping the Future of Business" class="image-post-thumbnail" loading="eager" sizes="(max-width: 479px) 78vw, (max-width: 767px) 82vw, (max-width: 991px) 37vw, 33vw" src="img/7.png"/></a>
                                  <div class="date">December 9, 2023</div>
                                  <a class="link-post w-inline-block" href="post/ai-in-2024-the-5-trends-shaping-the-future-of-business.html">
                                     <h3 class="heading-post">AI in 2024: The 5 Trends Shaping the Future of Business</h3>
@@ -342,7 +342,6 @@
 
       </div>
       <script src="jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript"></script>
-    <script src="jquery-3.5.1.min.dc5e7f18c8-2.js" type="text/javascript"></script>
     <script src="webflow_updated.js" type="text/javascript"></script>
     <script src="webflow.32181b085.js" type="text/javascript"></script>
     </body>
